
package box2d;

option java_package = "org.box2d.proto";
option java_outer_classname = "Box2D";

// Math classes

message PbVec2 {
  required float x = 1;
  required float y = 2;
}

// enums

enum PbBodyType {
  STATIC = 0;
  DYNAMIC = 1;
  KINEMATIC = 2;
}

enum PbShapeType { 
  CIRCLE = 1;
  POLYGON = 2;
  EDGE = 3;
  LOOP = 4;
}

enum PbJointType {
  DISTANCE = 1;
  REVOLUTE = 2;
  PRISMATIC = 3;
  PULLEY = 4;
  MOUSE = 5;
  GEAR = 6;
  WHEEL = 7;
  WELD = 8;
  FRICTION = 9;
  ROPE = 10;
  CONSTANT_VOLUME = 11;
  LINE = 12;
}


// objects

message PbFilter {
  optional int32 category_bits = 1;
  optional int32 mask_bits = 2;
  optional int32 group_index = 3;
}

// just include all fields we might use
message PbShape {
  optional int64 tag = 1;
  required PbShapeType type = 2;
  optional PbVec2 center = 10; // circle
  optional float radius = 11; // circle
  
  repeated PbVec2 points = 20; // polygon
  repeated PbVec2 normals = 21; // polygon
  optional PbVec2 centroid = 22; // polygon
}

message PbFixture {
  optional int64 tag = 1;
  optional float restitution = 2;
  optional float friction = 3;
  optional float density = 4;
  optional bool sensor = 5;
  
  optional PbFilter filter = 10;
  optional PbShape shape = 11;
}

message PbJoint {
  optional int64 tag = 1;
  required PbJointType type = 2;
  
  optional int32 body_a = 3;
  optional int32 body_b = 4;
  
  optional bool collideConnected = 5;
  
  optional PbVec2 local_anchor_a = 6;
  optional PbVec2 local_anchor_b = 7;
  
  optional float ref_angle = 10; // used by: revolute, prismatic, joint
  optional bool enable_limit = 12; // used by: revolute, prismatic, line
  optional float lower_limit = 13; // used by: revolute, prismatic, line
  optional float upper_limit = 14; // used by: revolute, prismatic, line
  optional bool enable_motor = 15; // used by: revolute, prismatic, wheel, line
  optional float motor_speed = 16; // used by: revolute, prismatic, wheel
  optional float max_motor_torque = 17; // used by: revolute, wheel
  
  optional PbVec2 local_axis_a = 20; // used by: prismatic, wheel, line
  optional float max_motor_force = 21; // used by: prismatic, line
  
  optional float length = 30; // used by: distance
  optional float frequency = 31; // used by: distance, mouse, con vol
  optional float damping_ratio = 32; // used by: distance, mouse, col vol
  
  optional PbVec2 ground_anchor_a = 40; // used by: pulley
  optional PbVec2 ground_anchor_b = 41; // used by: pulley
  optional float length_a = 42; // used by: pulley
  optional float length_b = 43; // used by: pulley
  optional float ratio = 44; // used by: pulley, gear
  optional float max_length_a = 45; // used by: pulley
  optional float max_length_b = 46; // used by: pulley
  
  optional PbVec2 target = 50; // used by: mouse
  optional float max_force = 51; // used by: mouse, friction, rope
  
  optional int32 joint1 = 61; // used by: gear
  optional int32 joint2 = 62; // used by: gear
  
  optional float spring_frequency = 70; // used by: wheel
  optional float spring_damping_ratio = 71; // used by: wheel
  
  // weld joint 80
  
  optional float max_torque = 90; // used by: friction
  
  optional float max_length = 100; // used by: rope
  
  repeated int32 bodies = 110; // used by: con vol
  repeated int32 joints = 111; // used by: con vol
  optional float target_volume = 112; // used by: con vol
  
  // line joint 120
}

message PbBody {
  optional int64 tag = 1;
  required PbBodyType type = 2;
  
  // physical attributes
  optional PbVec2 position = 10;
  optional float angle = 11;
  optional PbVec2 linear_velocity = 12;
  optional float angular_velocity = 13;
  optional PbVec2 force = 14;
  optional float torque = 15;
  // mass
  optional float mass = 16;
  optional float I = 17;
  
  // configuration
  optional float linear_damping = 50;
  optional float angular_damping = 51;
  optional float gravity_scale = 52;
  optional bool bullet = 53;
  optional bool allow_sleep = 54;
  optional bool awake = 55;
  optional bool active = 56;
  optional bool fixed_rotation = 57;
  
  repeated PbFixture fixtures = 100;
}

message PbWorld {
  optional int64 tag = 1;
  optional PbVec2 gravity = 2;
  optional bool allow_sleep = 3;
  optional bool auto_clear_forces = 4;
  optional bool warm_starting = 5;
  optional bool continuous_physics = 6;
  optional bool sub_stepping = 7;
  
  repeated PbBody bodies = 20;
  repeated PbJoint joints = 21;
}